# launchpad

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  manage.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/push/: SKILL.md
.claude/skills/push-pr/: SKILL.md
.do/: app-preview.yaml  app-testing.yaml  app.yaml
.github/workflows/: auto-promote.yml  preview-cleanup.yml  preview-deploy.yml
automatable_website/: middleware.py  settings.py  urls.py  views.py  wsgi.py
docs/: DEPLOYMENT.md
launchpad/: middleware.py  settings.py
scripts/: check-branch-sync.sh  generate-favicons.js  generate-favicons.sh  install-hooks.sh  package.json  start-dev-server.sh
scripts/hooks/: pre-commit  pre-push
static/: site.webmanifest
static/css/: style.css
templates/: index.html
tests/: conftest.py  test_health.py
