[project]
name = "automatable-website"
version = "0.1.0"
description = "Automatable Launch Pad - AI-powered business automation landing page"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0",
    "gunicorn>=21.0",
    "whitenoise>=6.6",
    "python-dotenv>=1.0",
    "dj-database-url>=2.1",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.7",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "automatable_website.settings"
python_files = ["test_*.py", "*_test.py"]
